--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,103 @@
-   <div className="relative flex justify-center items-center my-[11px]">
+import React, { useState } from 'react';
+import Search from '@/components/Search';
+
+interface ClientInfo {
+  accountName: string;
+  authorizedEmails: string[];
+  kycComments: string;
+  accountOfficer: string;
+}
+
+const mockClientData: ClientInfo = {
+  accountName: 'JOHN SMITH ENGINEERING INDUSTRIES S a.r.l.',
+  authorizedEmails: [
+    'email1@mail.com',
+    'email2@mail.com',
+    'email3@mail.com',
+    'kim.marry@email.com',
+    'iasd@email.com',
+  ],
+  kycComments:
+    '04/10/24 - Ok to add mobile phone number as per Mary B email from 1/24/24 at 9:40 AM',
+  accountOfficer: 'John Stuart - BR13',
+};
+
+const ClientSearch: React.FC = () => {
+  const [clientInfo, setClientInfo] = useState<ClientInfo | null>(null);
+  const [initiator] = useState('Taya Mullins');
+
+  const handleSearchSelect = () => {
+    setClientInfo(mockClientData);
+  };
+
+  return (
+    <div className="w-full max-w-[690px] h-auto bg-white rounded-[6px] border border-[#E3E3E3] p-6">
+      <p className="font-figtree font-semibold text-[18px] leading-[27px] tracking-[0.12px] text-[#484A55] mb-4">
+        Client Information
+      </p>
+
+      <div className="grid grid-cols-2 gap-4">
+        <div>
+          <label className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-[#636574]">
+            Initiator *
+          </label>
+          <input
+            type="text"
+            value={initiator}
+            readOnly
+            className="mt-1 w-full h-[36px] rounded-[4px] border border-[#D2D5DA] bg-[#F7F7F8] px-[12px] py-[6px] text-sm font-normal text-[#484A55] focus:outline-none"
+          />
+        </div>
+        <div>
+          <label className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-[#636574]">
+            CIF or Account Number *
+          </label>
+          <Search
+            placeholder="Search Account Number"
+            suggestions={["ABC1234"]}
+            onSelect={handleSearchSelect}
+          />
+        </div>
+      </div>
+
+      {clientInfo && (
+        <>
+          <div className="relative flex justify-center items-center my-[11px]">
             <div className="w-full h-px bg-[#E3E3E3]" />
             <div className="absolute bottom-[-6px] w-3 h-3 bg-white border-l border-t border-[#E3E3E3] rotate-45"></div>
           </div>
+
+          <div className="mt-6 border-t border-[#E3E3E3] pt-4">
+            <p className="font-figtree text-[14px] text-[#636574] mb-2">
+              <span className="font-semibold text-[#484A55]">Account Name:</span> {clientInfo.accountName}
+            </p>
+
+            <p className="font-figtree text-[14px] text-[#636574] mb-2 font-semibold">Authorized Email(s):</p>
+            <div className="flex flex-wrap gap-2 mb-4">
+              {clientInfo.authorizedEmails.map((email, index) => (
+                <span
+                  key={index}
+                  className="bg-[#F3F3F3] rounded-full px-3 py-1 text-[13px] font-figtree text-[#484A55]"
+                >
+                  {email}
+                </span>
+              ))}
+            </div>
+
+            <p className="font-figtree text-[14px] text-[#636574] font-semibold mb-1">KYC Comments:</p>
+            <p className="font-figtree text-[13px] text-[#636574] mb-4">{clientInfo.kycComments}</p>
+
+            <div className="flex items-center gap-2">
+              <span className="text-[#484A55]">📎</span>
+              <p className="font-figtree text-[14px] text-[#636574]">
+                <span className="font-semibold text-[#484A55]">Account Officer:</span> {clientInfo.accountOfficer}
+              </p>
+            </div>
+          </div>
+        </>
+      )}
+    </div>
+  );
+};
+
+export default ClientSearch;
